--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,34 @@
 /* You can add global styles to this file, and also import other style files */
+.search{
+    width: inherit;
+    display: block;
+    margin-bottom: 15px;
+    padding: 2px;
+    font-family: inherit;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-color: #fff;
+    background-clip: padding-box;
+    transition: border-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+
+    border:0;
+    border-bottom:1px solid blue;
+}
+
+.search::placeholder {
+    color: #212529;
+    opacity: 0.4;
+}
+
+.search:focus{
+    color: #212529;
+    background-color: #fff;
+    outline: 0;
+    transition: all 0.3s;
+}
+
+.icon{
+    color: blue;
+}
